force-app/main/default/objects/HealthCare_Procedure__c/HealthCare_Procedure__c.object-meta.xml
<CustomObject>
    <label>HealthCare Procedure</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HealthCare Procedure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>