force-app/main/default/objects/HealthCare_Procedure__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation and Management</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Radiology, Pathology and Lab</fullName>
            </value>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>