force-app/main/default/objects/HealthCare_Procedure__c/fields/CodeDescription__c.field-meta.xml
<CustomField>
    <fullName>CodeDescription__c</fullName>
    <label>CodeDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>