force-app/main/default/objects/HealthCare_Procedure__c/fields/CodeShortDescription__c.field-meta.xml
<CustomField>
    <fullName>CodeShortDescription__c</fullName>
    <label>CodeShortDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>