force-app/main/default/objects/HealthCare_Procedure__c/fields/CodeType__c.field-meta.xml
<CustomField>
    <fullName>CodeType__c</fullName>
    <label>CodeType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICD10-P</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>HCPCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>