force-app/main/default/objects/HealthCare_Procedure__c/fields/LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>LastReferencedDate__c</fullName>
    <label>LastReferencedDate</label>
    <type>DateTime</type>
</CustomField>