force-app/main/default/objects/HealthCare_Procedure__c/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <label>LastViewedDate</label>
    <type>DateTime</type>
</CustomField>