force-app/main/default/objects/HealthCare_Procedure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Code__c</columns>
    <columns>CodeDescription__c</columns>
    <columns>CodeShortDescription__c</columns>
    <columns>CodeType__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>